opam-version: "1.2"
version: "0.2.1"
maintainer: "Vincent Jacques <vincent@vincent-jacques.net>"
authors: "Vincent Jacques <vincent@vincent-jacques.net>"
homepage: "https://jacquev6.github.io/DrawGrammar/"
doc: "https://jacquev6.github.io/DrawGrammar/"
dev-repo: "https://github.com/jacquev6/DrawGrammar.git"
bug-reports: "http://github.com/jacquev6/DrawGrammar/issues/"
license: "MIT"
available: [ocaml-version >= "4.02.3" & ocaml-version < "4.07.0"]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "jbuilder" {build}
  "menhir"
  "JsOfOCairo" {>= "1.0.1"}
  "cairo2"
  "General" {>= "0.4.0"}
]
