opam-version: "2.0"
version: "0.2.2"
maintainer: "Vincent Jacques <vincent@vincent-jacques.net>"
authors: "Vincent Jacques <vincent@vincent-jacques.net>"
dev-repo: "git+https://github.com/jacquev6/DrawGrammar.git"
license: "MIT"
homepage: "https://jacquev6.github.io/DrawGrammar/"
doc: "https://jacquev6.github.io/DrawGrammar/"
bug-reports: "http://github.com/jacquev6/DrawGrammar/issues/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "menhir"
  "JsOfOCairo" {>= "2.0.0" & < "3"}
  "cairo2" {>= "0.6" & < "0.7"}
  "General" {>= "0.4.0"}
]
synopsis: "Draw railroad diagrams of EBNF grammars"
description:
  "An [interactive demo](http://jacquev6.github.io/DrawGrammar/) is available."
